Сделал отдельную страничку под всю инфу про покемона, немного запартачил с абилити, завтра все исправлю

--- a/src/components/decorativeTabs/decorativeTabs.sass
+++ b/src/components/decorativeTabs/decorativeTabs.sass
@@ -28,5 +28,6 @@
 	cursor: pointer
 	font-weight: bold
 	transition: transform 0.2s ease
+	text-decoration: none
 	&:hover
 		transform: scale(1.05)
