--- a/src/components/gallery/gallery.sass
+++ b/src/components/gallery/gallery.sass
@@ -87,7 +87,12 @@
 		transform: translateY(0)
 
 .gallery__learn-more
-	margin-top: 1rem
+	text-decoration: none
+	display: block
+	font-size: 14px
+	width: 100px
+	height: 25px
+	margin: 10px auto
 	padding: 0.5rem 1.2rem
 	background-color: #ffd700
 	border: none
