--- a/src/components/pages/SinglePikachuPage/SinglePikachuPage.sass
+++ b/src/components/pages/SinglePikachuPage/SinglePikachuPage.sass
@@ -50,24 +50,11 @@
 		padding: 0.4rem 0.8rem
 		border-radius: 10px
 
-.pokemon__abilities
-	margin-top: 2rem
-
-.pokemon__abilities-block
-	margin-bottom: 1rem
-	h3
-		margin-bottom: 0.5rem
-
-.pokemon__ability-item
-	background: #fff
-	border-left: 4px solid #007bff
-	padding: 0.5rem 1rem
-	margin-bottom: 0.5rem
-	border-radius: 5px
-	white-space: pre-line
-
 .pokemon__back-link
 	display: inline-block
+	border: none
+	background-color: transparent
+	cursor: pointer
 	margin-top: 2rem
 	color: #007bff
 	text-decoration: none
@@ -117,9 +104,14 @@
 	color: white
 	font-weight: bold
 	text-transform: capitalize
+	text-decoration: none
 	font-size: 14px
+	transition: transform .5s ease-out, box-shadow .5s ease-out
 
-	// Типы с разными цветами
+	&:hover
+		transform: translateY(-7.5px)
+		box-shadow: 0px 5px 5px rgba(0, 0, 0, .5)
+
 	&.type-electric
 		background-color: #FFCE4B
 
@@ -173,3 +165,25 @@
 
 	&.type-steel
 		background-color: #B7B7CE
+
+.pokemon__abilities
+	margin-top: 20px
+	padding: 0
+	list-style: none
+	display: flex
+	flex-wrap: wrap
+	gap: 10px
+
+.pokemon__ability-link
+	color: #2b3a67
+	text-decoration: none
+	font-weight: 500
+	transition: color 0.3s ease
+	background-color: #f0f4ff
+	padding: 8px 14px
+	border-radius: 20px
+	transition: all 0.3s ease
+	box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1)
+	&:hover
+		color: #1b264f
+		box-shadow: 0px 15px 15px rgba(0, 0, 0, .2)
