Финальная сборка проекта

--- a/src/components/pikachuList/pikachuList.sass
+++ b/src/components/pikachuList/pikachuList.sass
@@ -46,3 +46,24 @@
 				font-size: 0.9rem
 				text-transform: uppercase
 				box-shadow: inset 0 0 3px rgba(0, 0, 0, 0.1)
+			
+			.name
+				padding-top: 3.5px
+		
+	&-btn
+		width: 80px
+		height: 35px
+		font-size: 12px
+		border-radius: 20px
+		outline: none
+		border: none
+		cursor: pointer
+		background-color: #ffbe76
+		color: #000
+		margin: 10px auto
+		transition: .5s all
+		font-weight: 700
+
+		&:hover
+			box-shadow: 1px 5px 6px rgba(185, 65, 100, .5)
+			transform: translateY(-5px) scale(1.1)
